--- a/Agenda/.classpath
+++ b/Agenda/.classpath
@@ -8,5 +8,8 @@
 	<classpathentry kind="lib" path="lib/jasperreports-6.0.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-beanutils-1.9.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/jasperreports-fonts-6.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/jasperreports-functions-6.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/jasperreports-javaflow-6.0.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
