--- a/Agenda/.classpath
+++ b/Agenda/.classpath
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.35-bin.jar" sourcepath="lib/mysql-connector-java-5.1.35-bin.jar"/>
 	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-digester-2.1.jar"/>
-	<classpathentry kind="lib" path="lib/jasperreports-6.0.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-beanutils-1.9.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/jasperreports-fonts-6.0.0.jar"/>
-	<classpathentry kind="lib" path="lib/jasperreports-functions-6.0.0.jar"/>
-	<classpathentry kind="lib" path="lib/jasperreports-javaflow-6.0.0.jar"/>
 	<classpathentry kind="lib" path="lib/jasperreports-6.5.1.jar"/>
 	<classpathentry kind="lib" path="lib/jasperreports-chart-customizers-6.5.1.jar"/>
 	<classpathentry kind="lib" path="lib/jasperreports-chart-themes-6.5.1.jar"/>
 	<classpathentry kind="lib" path="lib/jasperreports-fonts-6.5.1.jar"/>
 	<classpathentry kind="lib" path="lib/jasperreports-functions-6.5.1.jar"/>
 	<classpathentry kind="lib" path="lib/jasperreports-javaflow-6.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/spring-beans-4.3.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/spring-core-4.3.2.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/joda-time-2.0.jar"/>
+	<classpathentry kind="lib" path="lib/jcommon-1.0.8.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.0.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
